Fix .modal-body scrollbar issue on /mycq/marketplace page

--- a/web/less/frontend/_modals.less
+++ b/web/less/frontend/_modals.less
@@ -155,3 +155,7 @@
 	font: 0px/0 a;
 	overflow: hidden;
 }
+
+#body-mycq-marketplace .modal .modal-body.opened {
+	overflow-y: hidden
+}
